spacing fix

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ li {
 #contents {
     display: flex;
     flex-direction: column;
-    margin: 50px 0px 40px 0px;
+    margin: 50px 0px 80px 0px;
     background-color: #0e0e0e;
     padding: 20px;
     border-radius: 20px;
